--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "playwright test",
+    "test:coverage": "nyc --reporter=json-summary --reporter=text playwright test"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "nyc": "^17.1.0",
+    "playwright": "^1.48.0",
+    "playwright-test-coverage": "^1.2.12",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.8"
+    "vite": "^5.2.8",
+    "vite-plugin-istanbul": "^6.0.2"
   },
   "dependencies": {
     "preline": "^2.1.0",
