--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,10 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: Install Dependencies
+        run: |
+          npm ci
+
       - name: Run tests
         run: |
           npx playwright install --with-deps chromium
@@ -44,7 +48,7 @@ jobs:
             
       - name: Build
         run: |
-          npm ci && npm run build
+          npm run build
           cp dist/index.html dist/404.html
 
       - name: Update Pages Artifact
