--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,11 @@ jobs:
     needs: build
     permissions:
       id-token: write
+    environment:
+      name: production
+      url: https://pizza.pizzasco.lol
     runs-on: ubuntu-latest
+    
     env:
       version: ${{needs.build.outputs.version}}
     steps:
