--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,8 +85,7 @@ jobs:
       - name: Push to AWS S3
         run: |
           echo Deploying $version
-          aws s3 cp dist s3://${{ secrets.APP_BUCKET }} --recursive
-          aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRIBUTION_ID }} --paths "/*"
+          aws s3 cp dist s3://${{ secrets.APP_BUCKET }}/$version --recursive
   release:
     needs:
       - build
@@ -104,4 +103,3 @@ jobs:
             ## Changes
             ${{ github.event.head_commit.message }}
             **commit**: ${{ github.sha }}
-
