--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
     permissions:
       id-token: write
     environment:
-      name: production
+      name: staging
       url: https://pizza.pizzasco.lol
     runs-on: ubuntu-latest
     
@@ -86,6 +86,22 @@ jobs:
         run: |
           echo Deploying $version
           aws s3 cp dist s3://${{ secrets.APP_BUCKET }}/$version --recursive
+      - name: Update staging version
+        run: |
+          # Get the current distribution and update it to use the new version
+          aws cloudfront get-distribution-config --id ${{ secrets.DISTRIBUTION_ID }} > original.json
+          # Pull out the ETag field
+          etag=$(jq -r '.ETag' original.json)
+          # Pull out the distribution config
+          jq '.DistributionConfig' original.json > request.json
+          # Update the version field to our new version
+          # .Origins.Items[0] corresponds to our S3 bucket
+          jq --arg version "/$version" '.Origins.Items[0].OriginPath = $version' request.json > finalRequest.json
+          aws cloudfront update-distribution --id ${{ secrets.DISTRIBUTION_ID }} --if-match $etag --distribution-config file://finalRequest.json
+      
+          # Wait for the distribution to deploy and then invalidate the cache
+          while [ "$(aws cloudfront get-distribution --id ${{ secrets.DISTRIBUTION_ID }} --query 'Distribution.Status' --output text)" != "Deployed" ]; do echo "Distribution is still updating..."; sleep 5; done
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRIBUTION_ID }} --paths "/*"
   release:
     needs:
       - build
