update(ci) deployment url

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
       id-token: write
     environment:
       name: staging
-      url: https://pizza.pizzasco.lol
+      url: https://stage-pizza.pizzasco.lol
     runs-on: ubuntu-latest
     
     env:
